# GRAFICAS

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  GUI.cpp  GUI.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  README.md  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  ShaderObject.cpp  ShaderObject.h  ShaderProgram.cpp  ShaderProgram.h  conandata.yml  imgui.ini  main.cpp
Shaders/: pag03-fs.glsl  pag03-vs.glsl  pag07-fs.glsl  pag07-vs.glsl  pag08-fs.glsl  pag08-vs.glsl
glad/include/glad/: glad.h
glad/src/: glad.c
